# cleanndkproject

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/xieby/puredemo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
coremodule/: build.gradle
coremodule/src/main/: AndroidManifest.xml
coremodule/src/main/cpp/: CMakeLists.txt  coretest.cpp
gradle/wrapper/: gradle-wrapper.properties
